# createmidi

./: .gitignore  CMakeLists.txt  Doxyfile  Doxyfile.in  README.md
example/: example.cpp  main.cpp
include/: MIDIfile.h  MIDIhead.h  MIDItrack.h  MIDItrackevt.h
src/: MIDIfile.cpp  MIDIhead.cpp  MIDItrack.cpp  MIDItrackevt.cpp
